Update api spec, more endpoints implemented, fixed critical bug
