# server/shopper.openapi.yml
@@ -99,7 +99,6 @@ paths:
           $ref: '#/components/responses/Unauthorized'
   /profile:
     get:
-      deprecated: true
       summary: Get user info
       tags:
         - Profile
@@ -113,8 +112,8 @@ paths:
                 properties:
                   username:
                     type: string
-                  permissions:
-                    type: string
+                  registerDate:
+                    type: number
         '401':
           $ref: '#/components/responses/Unauthorized'
     patch:
@@ -172,9 +171,8 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
-  /shoppinglist: # Get shopping list
-    get:
-      deprecated: true
+  /shoppinglist:
+    get: # Get shopping list
       summary: Get all items in the shopping list
       tags:
         - Shopping list
@@ -187,6 +185,82 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/ShoppingListArticle'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+    post: # Add to shoppinglist
+      summary: Add to shoppinglist
+      tags:
+        - Shopping list
+      requestBody:
+        required: true
+        content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  barcode:
+                    type: string
+                    example: 7310070001764
+                  display_name:
+                    type: string
+                    example: Ramlösa Smultron 50cl
+                  manufacturer:
+                    type: string
+                    example: Carlsberg Sweden
+                  amount:
+                    type: number
+                    example: 2
+                required:
+                  - barcode
+                  - display_name
+                  - manufacturer
+                  - amount
+      responses:
+        '201':
+          $ref: '#/components/responses/Created'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+    patch: # Add to shoppinglist
+      summary: Add to shoppinglist
+      deprecated: true
+      tags:
+        - Shopping list
+      requestBody:
+        required: true
+        content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ShoppingListArticle'
+      responses:
+        '200':
+          $ref: '#/components/responses/Ok'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+    delete: # Add to shoppinglist
+      summary: Remove from the shoppinglist
+      tags:
+        - Shopping list
+      requestBody:
+        required: true
+        content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    example: 5be1f0dd1c798c0389139bd5
+                required:
+                  - id
+      responses:
+        '200':
+          $ref: '#/components/responses/Ok'
+        '400':
+          $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
   /bcds: # Add / Edit / Delete article
@@ -224,6 +298,43 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '409':
           $ref: '#/components/responses/Conflict'
+  /bcds/{barcode}:
+    get:
+      summary: Get info about a specific article
+      tags:
+        - Barcode Data Store
+      responses:
+        '200':
+          description: Article object
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  barcode:
+                    type: string
+                    example: 7310070001764
+                  display_name:
+                    type: string
+                    example: Ramlösa Smultron 50cl
+                  manufacturer:
+                    type: string
+                    example: Carlsberg Sweden
+                required:
+                  - barcode
+                  - display_name
+                  - manufacturer
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+      parameters:
+        - name: barcode
+          in: path
+          description: Barcode string
+          required: true
+          schema:
+            type: string
     patch:
       deprecated: true
       summary: Edit an article in the barcode database
@@ -256,23 +367,18 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
+      parameters:
+        - name: barcode
+          in: path
+          description: Barcode string
+          required: true
+          schema:
+            type: string
     delete:
       deprecated: true
       summary: Delete article from the barcode database
       tags:
         - Barcode Data Store
-      requestBody:
-        required: true
-        content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  barcode:
-                    type: string
-                    example: 7310070001764
-                required:
-                  - barcode
       responses:
         '200':
           $ref: '#/components/responses/Ok'
@@ -280,36 +386,6 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
-  /bcds/{barcode}:
-    get:
-      summary: Get info about a specific article
-      tags:
-        - Barcode Data Store
-      responses:
-        '200':
-          description: Article object
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  barcode:
-                    type: string
-                    example: 7310070001764
-                  display_name:
-                    type: string
-                    example: Ramlösa Smultron 50cl
-                  manufacturer:
-                    type: string
-                    example: Carlsberg Sweden
-                required:
-                  - barcode
-                  - display_name
-                  - manufacturer
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '404':
-          $ref: '#/components/responses/NotFound'
       parameters:
         - name: barcode
           in: path
@@ -371,6 +447,8 @@ components:
     ShoppingListArticle:
       type: object
       properties:
+        _id:
+          type: string
         barcode:
           type: string
         display_name:
@@ -380,6 +458,7 @@ components:
         amount:
           type: number
       required:
+        - _id
         - barcode
         - display_name
         - manufacturer
