# server/src/api/v1/main.ts
@@ -1,13 +1,16 @@
 import { Router } from 'express';
-import { exit } from 'process';
 import { mongoConf } from './config';
+import * as process from 'process';
 import * as mongoose from 'mongoose';
 import * as log from '../../logger';
 
+// Endpoints
 import * as swagger from './endpoints/swagger';
 import * as bcds from './endpoints/bcds';
 import * as user from './endpoints/user';
 import * as auth from './endpoints/auth';
+import * as profile from './endpoints/profile';
+import * as shoppinglist from './endpoints/shoppinglist';
 
 // Connect to Mongodb
 mongoose
@@ -19,7 +22,7 @@ mongoose
   .catch(e => {
     log.panic(e);
     log.panic('Exiting due to db connnection error...');
-    exit(-1);
+    process.exit(-1);
   });
 
 const router = Router();
@@ -28,6 +31,8 @@ router.use('/docs', swagger);
 router.use('/bcds', bcds);
 router.use('/user', user);
 router.use('/auth', auth);
+router.use('/profile', profile);
+router.use('/shoppinglist', shoppinglist);
 
 router.get('/', (_req, res) => {
   res.redirect('/v1/docs');
