# server/src/api/v1/models/User.ts
@@ -1,32 +1,6 @@
 import { Schema, Model, model, Document } from 'mongoose';
+import { ShoppingListItemSchema, IShoppingListItem } from './ShoppingListItem';
 import * as bcrypt from 'bcrypt';
-
-// Shopping list items
-const ShoppingListItem: Schema = new Schema({
-  barcode: {
-    type: String,
-    required: true
-  },
-  display_name: {
-    type: String,
-    required: true
-  },
-  manufacturer: {
-    type: String,
-    default: null
-  },
-  amount: {
-    type: Number,
-    required: true
-  }
-});
-
-interface IShoppingListItem extends Schema {
-  barcode: string;
-  display_name: string;
-  manufacturer: string;
-  amount: number;
-}
 
 interface IPermissions extends Schema {
   bcdsWrite: boolean;
@@ -34,9 +8,10 @@ interface IPermissions extends Schema {
 
 interface IUserModel extends Document {
   username: string;
-  password: string;
+  hash: string;
   shoppingList: IShoppingListItem[];
   permissions: IPermissions;
+  registerDate: string;
 }
 
 const UserSchema: Schema = new Schema({
@@ -44,30 +19,42 @@ const UserSchema: Schema = new Schema({
     type: String,
     required: true
   },
-  password: {
+  hash: {
     type: String,
     required: true
   },
-  shoppingList: [ShoppingListItem],
+  shoppingList: [ShoppingListItemSchema],
   permissions: {
     type: Object,
     default: {
       bcdsWrite: false
     }
+  },
+  registerDate: {
+    type: Number,
+    default: Date.now
   }
 });
 
 // Hashing a password before saving it to the database
-UserSchema.pre('save', function (next) {
-  const user: any = this;
-  bcrypt.hash(user.password, 10, function (err, hash) {
-    if (err) {
-      return next(err);
-    }
-    user.password = hash;
-    next();
-  });
+// UserSchema.pre('save', function (next) {
+//   const user: any = this;
+//   console.log(this);
+//   bcrypt.hash(user.password, 10, function (err, hash) {
+//     if (err) {
+//       return next(err);
+//     }
+//     user.password = hash;
+//     next();
+//   });
+// });
+
+// Hashing the password before saving it
+UserSchema.virtual('password').set(function (password: string) {
+  const salt = bcrypt.genSaltSync(10);
+  this.hash = bcrypt.hashSync(password, salt);
 });
 
 const User: Model<IUserModel> = model('User', UserSchema);
+// export const ShoppingListItem: Model<IShoppingListItem> = model('ShoppingListItem', ShoppingListItemSchema);
 export = User;
